tests/test_scope/good/simple.catala_en
## Test

```catala
declaration scope Foo:
  output bar content integer

scope Foo:
  definition bar equals 0
```

```catala-test {id="Lcalc"}
catala Lcalc -s Foo
```
